# hexagonrpc

./: Makefile  README.md  meson.build  meson.options  sensh.c
chrecd/: interfaces.c  meson.build
fastrpc/: README.md  aee_error.h  apps_std.c  context.c  fastrpc-ctx.c  fastrpc.c  fastrpc.h  fastrpc_adsp_default_listener.c  fastrpc_adsp_default_listener.h  fastrpc_adsp_listener.c  fastrpc_adsp_listener.h  fastrpc_apps_std.c  fastrpc_apps_std.h  fastrpc_chre_slpi.c  fastrpc_chre_slpi.def  fastrpc_chre_slpi.h  fastrpc_remotectl.c  fastrpc_remotectl.def  fastrpc_remotectl.h  hexagonfs.c  hexagonfs.h  hexagonfs_mapped.c  hexagonfs_plat_subtype_name.c  iobuffer.c  iobuffer.h  listener.c  listener.h  localctl.c  meson.build  rpcd.c
fastrpc/chrecd/: main.c
fastrpc/hexagonrpcd/: aee_error.c  apps_std.c  apps_std.h  fastrpc_adsp_default_listener.c  fastrpc_adsp_default_listener.def  fastrpc_adsp_default_listener.h  fastrpc_adsp_listener.c  fastrpc_adsp_listener.def  fastrpc_adsp_listener.h  fastrpc_apps_std.c  fastrpc_apps_std.def  fastrpc_apps_std.h  fastrpc_chre_slpi.c  fastrpc_chre_slpi.def  fastrpc_chre_slpi.h  fastrpc_remotectl.c  fastrpc_remotectl.def  fastrpc_remotectl.h  hexagonfs.c  hexagonfs.h  hexagonfs_mapped.c  hexagonfs_plat_subtype_name.c  hexagonfs_virt_dir.c  interfaces.c  iobuffer.c  iobuffer.h  listener.c  listener.h  localctl.c  localctl.h  meson.build  rpcd.c  rpcd_builder.c  rpcd_builder.h
fastrpc/hexagonrpcd/interfaces/: adsp_default_listener.def  adsp_listener.def  apps_std.def  chre_slpi.def  remotectl.def
fastrpc/include/libhexagonrpc/: interface.h  session.h
fastrpc/include/libhexagonrpc/interfaces/: remotectl.def
fastrpc/libhexagonrpc/: context.c  fastrpc.c  meson.build  session.c
fastrpc/tests/: meson.build
hexagonrpcd/: apps_std.c  hexagonfs.h  hexagonfs_mapped.c  hexagonfs_plat_subtype_name.c  hexagonfs_virt_dir.c  hexagonrpcd.1  interfaces.c  iobuffer.h  listener.c  listener.h  meson.build  rpcd.c  rpcd_builder.c  rpcd_builder.h
hexagonrpcd/interfaces/: adsp_default_listener.def  adsp_listener.def  apps_std.def
include/libhexagonrpc/: fastrpc.h
libhexagonrpc/: context.c  fastrpc.c  interfaces.c  meson.build
protobuf/: meson.build  sns_client_event_msg.proto  sns_client_request_msg.proto  sns_proximity_event.proto  sns_std_attr_event.proto  sns_std_attr_req.proto  sns_std_sensor_event.proto  sns_std_suid.proto  sns_suid_event.proto  sns_suid_req.proto
qmi/: meson.build  qmi_sns_client.c  qmi_sns_client.h  qmic_wrapper.sh  sns_client.qmi
tests/: meson.build  sample_file.txt  test_hexagonfs.c  test_iobuffer.c
tools/: Makefile  registry.c  sscregistrygen.c
