executable('hexagonrpcd',
  'aee_error.c',
  'apps_std.c',
  'interfaces.c',
  'hexagonfs.c',
  'hexagonfs_mapped.c',
  'hexagonfs_plat_subtype_name.c',
  'hexagonfs_virt_dir.c',
  'iobuffer.c',
  'listener.c',
  'localctl.c',
  'rpcd.c',
  'rpcd_builder.c',
  c_args : cflags,
  include_directories : include,
  install : true,
  link_with : libhexagonrpc,
  install_dir : get_option('bindir'),
)
install_man('hexagonrpcd.1')
