executable('hexagonrpcd',
  'aee_error.c',
  'apps_std.c',
  'fastrpc_adsp_default_listener.c',
  'fastrpc_adsp_listener.c',
  'fastrpc_apps_std.c',
  'fastrpc_chre_slpi.c',
  'fastrpc_remotectl.c',
  'hexagonfs.c',
  'hexagonfs_mapped.c',
  'hexagonfs_plat_subtype_name.c',
  'hexagonfs_virt_dir.c',
  'iobuffer.c',
  'listener.c',
  'localctl.c',
  'rpcd.c',
  c_args : ['-Wall', '-Wextra', '-Wpedantic'],
  include_directories : include,
  install : true,
  link_with : libhexagonrpc,
)
